[package]
name = "surface"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
winit = "0.27"
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6" # for sending panic error to js console
console_log = "0.2.0" # for sending logs to js console
wgpu = { version = "0.15", features = ["webgl"]} 
wasm-bindgen = "0.2" 
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

 
[lib]
crate-type = ["cdylib","rlib"]

